--- a/src/Clide.Interfaces/packages.config
+++ b/src/Clide.Interfaces/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitInfo" version="1.0.56-pre" targetFramework="net45" />
+  <package id="GitInfo" version="1.1.12" targetFramework="net45" />
   <package id="IFluentInterface" version="1.4.1" targetFramework="net45" developmentDependency="true" />
   <package id="netfx-System.ServiceProvider" version="1.2.1.0" targetFramework="net45" />
   <package id="netfx-System.StringFormatWith" version="1.1.0.0" targetFramework="net45" />
