--- a/src/Clide.Msi/packages.config
+++ b/src/Clide.Msi/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitInfo" version="1.0.56-pre" />
+  <package id="GitInfo" version="1.1.12" />
   <package id="WiX" version="3.10.1" />
 </packages>
