--- a/src/Clide.Vsix/packages.config
+++ b/src/Clide.Vsix/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitInfo" version="1.0.56-pre" targetFramework="net45" />
+  <package id="GitInfo" version="1.1.12" targetFramework="net45" />
+  <package id="GitInfo.Vsix" version="1.1.12" targetFramework="net45" />
   <package id="Merq" version="0.3.7-pre" targetFramework="net45" />
   <package id="Merq.Async" version="0.3.7-pre" targetFramework="net45" />
   <package id="Merq.Commands" version="0.3.7-pre" targetFramework="net45" />
