Provide a common ServiceProvider that is very robust
The lookup is more exhaustive than what we did in Clide v2,
based on learnings from xunit.vsix.

Fixed the DteToVsAdapter that was incorrectly importing
IServiceProvider and causing integration tests to fail.

--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -41,6 +41,11 @@
     <Compile Include="Adapters\DteAdapterFacade.cs" />
     <Compile Include="Extensions\MissingDependencyException.cs" />
     <Compile Include="Extensions\ServiceLocatorFacades.cs" />
+    <Compile Include="FallbackServiceProvider.cs" />
+    <Compile Include="Interop\NativeMethods.cs" />
+    <Compile Include="Interop\RunningObjects.cs" />
+    <Compile Include="ServiceProvider.cs" />
+    <Compile Include="ServiceLocator.cs" />
     <Compile Include="Solution\ISolutionExplorerNodeExtensions.cs" />
     <Compile Include="Solution\ISolutionNodeExtensions.cs" />
     <Compile Include="IAdaptable.cs" />
