--- a/src/Clide.Extensibility/project.json
+++ b/src/Clide.Extensibility/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
-    "GitInfo": "1.1.19",
+    "GitInfo": "1.1.20",
     "VSSDK.IDE.11": "11.0.4",
-    "VSSDK.Shell.11": "11.0.4",
+    "VSSDK.Shell.11": "11.0.4"
   },
   "frameworks": {
     "net45": {}
