--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -39,9 +39,11 @@
     <Compile Include="Adapters\SolutionAdapterFacade.cs" />
     <Compile Include="Adapters\VsLangAdapterFacade.cs" />
     <Compile Include="Adapters\DteAdapterFacade.cs" />
+    <Compile Include="Events\ShellInitialized.cs" />
     <Compile Include="Extensions\MissingDependencyException.cs" />
     <Compile Include="Extensions\ServiceLocatorFacades.cs" />
     <Compile Include="FallbackServiceProvider.cs" />
+    <Compile Include="IDevEnv.cs" />
     <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Interop\RunningObjects.cs" />
     <Compile Include="ServiceProvider.cs" />
@@ -88,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Clide.targets" />
