--- a/src/Clide.UnitTests/Clide.UnitTests.csproj
+++ b/src/Clide.UnitTests/Clide.UnitTests.csproj
@@ -39,16 +39,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\EventStreamSpec.cs" />
     <Compile Include="CompositionSpec.cs" />
+    <Compile Include="Events\ShellInitializedObservableSpec.cs" />
     <Compile Include="Extensions\ServiceProviderExtensionsSpec.cs" />
     <Compile Include="Extensions\StringExtensionsSpec.cs" />
     <Compile Include="Extensions\ServiceLocatorExtensionsSpec.cs" />
     <Compile Include="FakeSolutionExplorer.cs" />
     <Compile Include="Extensions\SolutionNodeExtensionsSpec.cs" />
+    <Compile Include="ReactiveSpec.cs" />
     <Compile Include="ServiceLocatorSpec.cs" />
     <Compile Include="StaFact.cs" />
     <Compile Include="GuardSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj">
