--- a/src/Clide.Vsix/project.json
+++ b/src/Clide.Vsix/project.json
@@ -1,18 +1,18 @@
 ﻿{
   "dependencies": {
-    "GitInfo": "1.1.19",
+    "GitInfo": "1.1.20",
     "IFluentInterface": "2.0.1",
-    "Merq": "0.3.30-pre",
-    "Merq.Async": "0.3.30-pre",
-    "netfx-System.StringResources": "3.0.12",
+    "Merq": "0.3.39-pre",
+    "Merq.Async": "0.3.39-pre",
+    "Microsoft.VisualStudio.SDK.VsixSuppression": "14.1.25",
+    "netfx-System.StringResources": "3.0.13",
     "Rx-Main": "2.2.5",
     "System.Diagnostics.Tracer": "1.0.7",
     "VSSDK.ComponentModelHost.11": "11.0.4",
     "VSSDK.DTE.10": "10.0.4",
     "VSSDK.IDE.11": "11.0.4",
     "VSSDK.Shell.11": "11.0.4",
-    "VSSDK.VSLangProj.11": "11.0.4",
-    "Microsoft.VisualStudio.SDK.VsixSuppression": "14.1.25"
+    "VSSDK.VSLangProj.11": "11.0.4"
   },
   "frameworks": {
     "net45": {}
