--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" InitialTargets="Validate" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -7,9 +7,8 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Clide</RootNamespace>
-    <AssemblyName>Clide</AssemblyName>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <AssemblyName>Clide.Core</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
@@ -42,7 +41,9 @@
     <Compile Include="Adapters\ProjectToDte.cs" />
     <Compile Include="Adapters\SolutionToVsAdapter.cs" />
     <Compile Include="Adapters\SolutionToVsLangAdapter.cs" />
-    <Compile Include="ObservableAttribute.cs" />
+    <Compile Include="ComponentAttribute.cs" />
+    <Compile Include="Components\Interop\VsShellProvider.cs" />
+    <Compile Include="Events\ShellInitializedObservable.cs" />
     <Compile Include="CommandHandlerAttribute.cs" />
     <Compile Include="Components\AsyncManagerProvider.cs" />
     <Compile Include="Components\CommandBus.cs" />
@@ -120,6 +121,13 @@
   <ItemGroup>
     <None Include="project.json" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Clide.targets" />
+  <Import Project="..\Clide.Tasks\bin\Clide.targets" Condition="Exists('..\Clide.Tasks\bin\Clide.targets')" />
+  <Target Name="Validate">
+    <Error Text="Build the Clide.Tasks.sln solution before building Clide.sln" Condition="!Exists('..\Clide.Tasks\bin\Clide.targets')" />
+  </Target>
 </Project>
