--- a/src/Package/Clide.Installer.nuspec
+++ b/src/Package/Clide.Installer.nuspec
@@ -6,12 +6,14 @@
 		<authors>Daniel Cazzulino</authors>
 		<owners>clariuslabs, kzu</owners>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>Clide</description>
+		<description>Clide Installer: VSIX, MSI and EXE (chained) installer integration.</description>
 		<copyright>Copyright 2012 Clarius Labs</copyright>
 	</metadata>
 	<files>
 		<file src="Clide.Installer.txt" target="Readme.txt" />
 		<file src="Clide.Installer.targets" target="build\Clide.Installer.targets" />
-		<file src="..\Clide.Installer\bin\$Configuration$\Clide.Installer.wixlib" target="tools" />
+		<file src="..\Installers\Clide.Lib\bin\$Configuration$\Clide.wixlib" target="tools" />
+		<file src="..\Installers\Clide.Msi\bin\$Configuration$\Clide.msi" target="tools" />
+		<file src="..\Clide.Vsix\bin\$Configuration$\Clide.vsix" target="tools" />
 	</files>
 </package>
