--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -127,7 +127,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Clide.targets" />
   <Import Project="..\Clide.Tasks\bin\Clide.targets" Condition="Exists('..\Clide.Tasks\bin\Clide.targets')" />
-  <Target Name="Validate">
+  <Target Name="Validate" Condition=" '$(GenerateExports)' == 'true' ">
     <Error Text="Build the Clide.Tasks.sln solution before building Clide.sln" Condition="!Exists('..\Clide.Tasks\bin\Clide.targets')" />
   </Target>
 </Project>
