Added IProjectNode.Supports (capabilities)

--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Solution\ISolutionItemNode.cs" />
     <Compile Include="Solution\ISolutionNode.cs" />
     <Compile Include="Solution\ISolutionVisitor.cs" />
+    <Compile Include="Solution\KnownCapabilities.cs" />
     <Compile Include="Solution\SolutionNodeKind.cs" />
     <Compile Include="Solution\SolutionVisitor.cs" />
   </ItemGroup>
