Switch to System.Diagnostics.Tracer nuget package for tracing
This package provides a simpler, non-async, straightforward implementation
of the ITracer we previously used, which is more suitable for cross-library
usage since it's an assembly.

This does not use the BlockingCollection the previous implementation
used, which sometimes caused tracking deadlocks (or at least weird-looking
threads view and debugging experience).

--- a/src/Clide.nuspec
+++ b/src/Clide.nuspec
@@ -93,6 +93,9 @@ v1.0
 * Tools options pages support</releaseNotes>
     <copyright>Copyright 2012</copyright>
     <tags>visualstudio vsx extensibility</tags>
+    <dependencies>
+      <dependency id="System.Diagnostics.Tracer" version="1.0.7" />
+    </dependencies>
   </metadata>
   <files>
     <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
