--- a/src/Clide/packages.config
+++ b/src/Clide/packages.config
@@ -23,9 +23,8 @@
   <package id="netfx-System.StringResources" version="3.0.4" targetFramework="net45" developmentDependency="true" />
   <package id="netfx-System.TypeInheritance" version="1.1.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="netfx-System.Windows.Threading.DispatcherInvokeExtensions" version="1.0.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="System.Diagnostics.Tracer" version="1.0.7" targetFramework="net45" />
   <package id="TaskHelpers.Sources" version="0.3" targetFramework="net45" developmentDependency="true" />
-  <package id="Tracer" version="1.1.5" targetFramework="net45" developmentDependency="true" />
-  <package id="Tracer.SystemDiagnostics" version="1.2" targetFramework="net45" developmentDependency="true" />
   <package id="VSSDK.ComponentModelHost" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.ComponentModelHost.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
