--- a/src/IntegrationPackage/packages.config
+++ b/src/IntegrationPackage/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="System.Diagnostics.Tracer" version="1.0.7" targetFramework="net45" />
   <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
