--- a/src/IntegrationTests/packages.config
+++ b/src/IntegrationTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Moq" version="4.1.1311.0615" targetFramework="net45" />
   <package id="netfx-Assertions" version="1.0.0.9" targetFramework="net40" />
+  <package id="System.Diagnostics.Tracer" version="1.0.7" targetFramework="net45" />
   <package id="VSSDK.ComponentModelHost" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.ComponentModelHost.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
