--- a/src/Clide/project.json
+++ b/src/Clide/project.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "GitInfo": "1.1.20",
     "IFluentInterface": "2.0.1",
-    "Merq": "0.3.39-pre",
-    "Merq.Async": "0.3.39-pre",
+    "Merq": "1.0.26-pre",
+    "Merq.Async": "1.0.26-pre",
+    "Microsoft.VisualStudio.Threading": "12.2.0",
     "netfx-System.StringResources": "3.0.13",
     "Rx-Main": "2.2.5",
     "System.Diagnostics.Tracer": "1.0.7",
